--- a/index.html
+++ b/index.html
@@ -54,6 +54,46 @@
       </div>
     </aside>
 
+    <section class="features">
+      <h3>Have the work week you always dreamed of — without the bad wifi.</h3>
+        <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+        </article>
+        <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+        </article>
+        <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
+        </article>
+        <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
+        </article>
+        <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+        </article>
+        <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Dedicated computer room for times when you must wifi.</p>
+        </article>
+    </section>
+
+    <section class="reviews">
+      <div class="content-wrapper">
+        <h3>Be a better team in 5 days, like these</h3>
+        <div>
+          <h4>LaCrue Bottling Co. October 2018</h4>
+        </div>
+        <div>
+          <p></p>
+        </div>
+      </div>
+    </section>
+
   </main>
 
   <footer>
