--- a/index.html
+++ b/index.html
@@ -57,27 +57,27 @@
     <section class="features">
       <h3>Have the work week you always dreamed of — without the bad wifi.</h3>
         <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon"><img src="img/campground.png" alt="tent icon"></p>
             <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
         </article>
         <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon"><img src="img/bed.png" alt="bed icon"></p>
             <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
         </article>
         <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon"><img src="img/utensils.png" alt="utensils icon"></p>
             <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
         </article>
         <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon"><img src="img/shoe-prints.png" alt="shoe prints icon"></p>
             <p class="features-item-description">5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
         </article>
         <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon"><img src="img/smile.png" alt="smiley face icon"></p>
             <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
         </article>
         <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon"><img src="img/wifi.png" alt="wifi icon"></p>
             <p class="features-item-description">Dedicated computer room for times when you must wifi.</p>
         </article>
     </section>
@@ -85,6 +85,7 @@
     <section class="reviews">
       <div class="content-wrapper">
         <h3>Be a better team in 5 days, like these</h3>
+        <div><img src="img/omar-lopez-296944-unsplash.png" alt="Group photo of LaCrue Bottling Co."></div>
         <div>
           <h4>LaCrue Bottling Co. October 2018</h4>
         </div>
