--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"></a>
+      <a href="#"><img src="img/logo.png" alt="unplugged logo"></a>
       <div class="header-divider"></div>
       <nav>
         <ul>
@@ -43,19 +43,29 @@
     <aside>
       <div class= "content-wrapper">
         <div class="form-description">
-          <h3>What to join the next retreat?</h3>
-          <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+          <div>
+            <h3>What to join the next retreat?</h3>
+          </div>
+          <div>
+              <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+            </div>
         </div>
         <div class="form">
-          <h3>Find out more</h3>
-          <input type="text" name="name" value="email address">
-          <input type="button" value="Download Itinerary">
+          <div>
+            <h3>Find out more</h3>
+          </div>
+          <div id="email">
+            <input type="text" name="name" value="email address">
+          </div>
+          <div id="button">
+            <input type="button" value="Download Itinerary">
+          </div>
         </div>
       </div>
     </aside>
 
     <section class="features">
-      <h3>Have the work week you always dreamed of — without the bad wifi.</h3>
+      <h3>Have the work week you always <br> dreamed of — <br> without the bad wifi.</h3>
         <article>
             <p class="fontawesome-icon"><img src="img/campground.png" alt="tent icon"></p>
             <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
@@ -84,13 +94,15 @@
 
     <section class="reviews">
       <div class="content-wrapper">
-        <h3>Be a better team in 5 days, like these</h3>
-        <div><img src="img/omar-lopez-296944-unsplash.png" alt="Group photo of LaCrue Bottling Co."></div>
+        <h3>Be a better team in 5 days, like these.</h3>
+        <div id="group-photo">
+          <img src="img/omar-lopez-296944-unsplash.png" alt="Group photo of LaCrue Bottling Co.">
+        </div>
         <div>
           <h4>LaCrue Bottling Co. October 2018</h4>
         </div>
         <div>
-          <p></p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
         </div>
       </div>
     </section>
