--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <h3>Find out more</h3>
           </div>
           <div id="email">
-            <input type="text" name="name" value="email address">
+            <input type="text" name="name" value="name@email.com">
           </div>
           <div id="button">
             <input type="button" value="Download Itinerary">
@@ -68,7 +68,7 @@
     </aside>
 
     <section class="features">
-      <h3>Have the work week you always <br> dreamed of — <br> without the bad wifi.</h3>
+      <h3>Have the work week you always dreamed of — without the bad wifi.</h3>
         <article>
             <p class="fontawesome-icon"><img src="img/campground.png" alt="tent icon"></p>
             <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
