--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="img/logo.png" alt="unplugged logo"></a>
+      <figure>
+        <a href="#"><img src="img/logo.png" alt="unplugged logo"></a>
+      </figure>
       <div class="header-divider"></div>
       <nav>
         <ul>
@@ -99,7 +101,9 @@
       <div class="content-wrapper">
         <h3>Be a better team in 5 days, like these.</h3>
         <div id="group-photo">
-          <img src="img/omar-lopez-296944-unsplash.png" alt="Group photo of LaCrue Bottling Co.">
+          <figure>
+              <img src="img/omar-lopez-296944-unsplash.png" alt="Group photo of LaCrue Bottling Co.">
+          </figure>
         </div>
         <div>
           <h4>LaCrue Bottling Co. October 2018</h4>
@@ -116,12 +120,15 @@
     <div class="content-wrapper">
       <div class="footer-content">
         <address class="contact">
+          <p>
 
+          </p>
         </address>
         <div class="social">
           <div class="social-icons">
             <p><a href="https://facebook.com/yoursite" target="_blank"></a></p>
-
+            <p><a href="https://facebook.com/yoursite" target="_blank"></a></p>
+            <p><a href="https://facebook.com/yoursite" target="_blank"></a></p>
           </div>
         </div>
       </div>
