--- a/about/index.html
+++ b/about/index.html
@@ -44,9 +44,11 @@
           </div>
       </section>
 
-      <figure class="map">
-
-      </figure>
+      <section class="map">
+        <figure>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3146.4081365366237!2d-86.03881968428915!3d37.94425521016252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8869271af240d089%3A0x835e3fe3e1f0963e!2sOtter%20Creek%20Outdoor%20Recreation%20Area!5e0!3m2!1sen!2sus!4v1575464016936!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        </figure>
+      </section>
 
       <section class="content-selection">
           <div class="content-wrapper">
