added correct icons

--- a/about/index.html
+++ b/about/index.html
@@ -11,6 +11,12 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+  <!--Google Font-->
+
+  <script src="https://kit.fontawesome.com/563e6e3dca.js" crossorigin="anonymous"></script>
+  <!---Font Awesome Kit--->
+
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
 
@@ -46,8 +52,7 @@
 
       <section class="map">
         <figure>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3146.4081365366237!2d-86.03881968428915!3d37.94425521016252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8869271af240d089%3A0x835e3fe3e1f0963e!2sOtter%20Creek%20Outdoor%20Recreation%20Area!5e0!3m2!1sen!2sus!4v1575464016936!5m2!1sen!2sus" 
-          width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3146.4081365366237!2d-86.03881968428915!3d37.94425521016252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8869271af240d089%3A0x835e3fe3e1f0963e!2sOtter%20Creek%20Outdoor%20Recreation%20Area!5e0!3m2!1sen!2sus!4v1575464016936!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </figure>
       </section>
 
