--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
   <!--Google Font-->
 
+  <script src="https://kit.fontawesome.com/563e6e3dca.js" crossorigin="anonymous"></script>
+  <!---Font Awesome Kit--->
+
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 
@@ -75,7 +78,7 @@
           <div class="features-items">
             <article>
               <p class="fontawesome-icon">
-                  <img src="img/bed.png" alt="bed icon">
+                  <i class="fas fa-campground"></i>
               </p>
               <p class="features-item-description">
                 Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.
@@ -83,7 +86,7 @@
             </article>
             <article>
               <p class="fontawesome-icon">
-                  <img src="img/bed.png" alt="bed icon">
+                <i class="fas fa-bed"></i>
               </p>
               <p class="features-item-description">
                 12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.
@@ -91,7 +94,7 @@
             </article>
             <article>
               <p class="fontawesome-icon">
-                  <img src="img/bed.png" alt="bed icon">
+                <i class="fas fa-utensils"></i>
               </p>
               <p class="features-item-description">
                 Private chef team providing on demand meals - just like your team kitchen.
@@ -99,7 +102,7 @@
             </article>
             <article>
               <p class="fontawesome-icon">
-                  <img src="img/bed.png" alt="bed icon">
+                <i class="fas fa-shoe-prints"></i>
               </p>
               <p class="features-item-description">
                 5 outdoor obstacle courses, including private beach ½ mile from bungalow.
@@ -107,7 +110,7 @@
             </article>
             <article>
               <p class="fontawesome-icon">
-                  <img src="img/bed.png" alt="bed icon">
+                <i class="fas fa-smile"></i>
               </p>
               <p class="features-item-description">
                 Retreat facilitator to manage your day to day activities so you all get a chance to reset.
@@ -115,7 +118,7 @@
             </article>
             <article>
               <p class="fontawesome-icon">
-                <img src="img/bed.png" alt="bed icon">
+                <i class="fas fa-wifi"></i>
               </p>
               <p class="features-item-description">
                 Dedicated computer room for times that you must wifi.
