--- a/about/index.html
+++ b/about/index.html
@@ -90,7 +90,9 @@
             </address>
             <div class="social">
               <div class="social-icons">
-                <p><a href="https://facebook.com/yoursite" target="_blank"></a></p>
+                <p><a href="https://facebook.com/yoursite" target="_blank"><i class="fab fa-facebook"></i></a></p>
+                <p><a href="https://facebook.com/yoursite" target="_blank"><i class="fab fa-twitter"></i></a></p>
+                <p><a href="https://facebook.com/yoursite" target="_blank"><i class="fab fa-instagram"></i></a></p>
     
               </div>
             </div>
