--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
             Social
           </h4>
           <div class="social-icons">
-            <p><a href="https://facebook.com/yoursite" target="_blank"><img src="img/facebook.png" alt="facebook icon"></a></p>
-            <p><a href="https://facebook.com/yoursite" target="_blank"><img src="img/twitter.png" alt="twitter icon"></a></p>
-            <p><a href="https://facebook.com/yoursite" target="_blank"><img src="img/instagram.png" alt="instagram icon"></a></p>
+            <p><a href="https://facebook.com/yoursite" target="_blank"><i class="fab fa-facebook"></i></a></p>
+            <p><a href="https://facebook.com/yoursite" target="_blank"><i class="fab fa-twitter"></i></a></p>
+            <p><a href="https://facebook.com/yoursite" target="_blank"><i class="fab fa-instagram"></i></a></p>
           </div>
         </div>
       </div>
